# learner

./: .editorconfig  .gitignore  Cargo.toml  get_test.sql
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  Test.vue  test.js
frontend/src/components/: Selector.vue  Test-Answer.vue  Test-Panel.vue
sql/sqlite/: 000.sql  001.sql  002.sql  003.sql  004.sql  005.sql  006.sql
src/: main.rs
