[package]
name = "learner"
version = "0.1.0"
authors = ["arnaud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
sqlite = "0.24.0"
serde = "1.0.106"
serde_json = "1.0.52"
rand = "0.7.3"
